--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
 
       - name: Print title
-        uses: ../actions/deploy
+        uses: m4dr1nch/DPI741-actions/.github/actions/deploy
         with:
           environ: 'dev'
           repo: 'https://github.com/m4dr1nch/DPI741-python-greetings'
