Test action testing

--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -46,20 +46,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3.5.2
-
-      - name: Print title
-        run: echo Testing on DEV
-
-      - name: Get mocha
-        run: git clone https://github.com/mtararujs/course-js-api-framework mocha
-
-      - name: Install npm dependencies
-        working-directory: mocha
-        run: npm install
-
-      - name: Run tests
-        working-directory: mocha
-        run: npm run greetings greetings_dev
+      - uses: ./.github/actions/test
+        with:
+          environ: 'dev'
 
 #  deploy-to-staging:
 #    name: Deploy to Staging
